--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-* {
+body {
   font-family: Helvetica, sans-serif;
   text-align: center;
 }
@@ -6,9 +6,17 @@
 h1 {
   font-size: 70px;
   font-weight: bold;
+
 }
 
-.banner {
+div.banner {
   color: White;
-  background-image: url("resources/images/the-flatiron-building.png");
+  background-image: url("../../resources/images/the-flatiron-building.png");
+}
+
+.footer {
+  text-align: left;
+  background-color: dimgray;
+  color: white;
+  font-size: 11px;
 }
