--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,16 +5,19 @@ body {
 
 h1 {
   font-size: 70px;
-  font-weight: bold;
 }
 
 h2 {
   font-size: 32px;
-  font-weight: bold;
 }
 
 h3 {
   font-size: 23px;
+}
+
+h1,
+h2,
+h3 {
   font-weight: bold;
 }
 
